--- a/views/partials/site-nav.handlebars
+++ b/views/partials/site-nav.handlebars
@@ -17,6 +17,9 @@
 						<a class="nav-link" href="/blog">Blog</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="/posts/new">Add Post</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="/contact">Contact</a>
 					</li>
 					<li class="nav-item">
